--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
+    "react-query": "^3.39.3",
     "react-scroll": "^1.8.9",
     "react-scroll-parallax": "^3.4.2",
     "tailwindcss": "3.3.2",
