--- a/package.json
+++ b/package.json
@@ -10,21 +10,27 @@
     "clean": "next clean"
   },
   "dependencies": {
+    "@next/eslint-plugin-next": "^13.4.7",
     "@types/node": "20.2.5",
     "@types/react": "18.2.9",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
+    "gray-matter": "^4.0.3",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
+    "react-markdown": "^8.0.7",
     "react-query": "^3.39.3",
     "react-scroll": "^1.8.9",
     "react-scroll-parallax": "^3.4.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "standard": "^17.1.0"
   }
 }
