--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "clean": "next clean"
   },
   "dependencies": {
+    "@mdx-js/loader": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
     "@next/eslint-plugin-next": "^13.4.7",
+    "@next/mdx": "^13.4.7",
     "@types/node": "20.2.5",
     "@types/react": "18.2.9",
     "@types/react-dom": "18.2.4",
@@ -19,11 +22,11 @@
     "eslint-config-next": "13.4.4",
     "gray-matter": "^4.0.3",
     "next": "13.4.4",
+    "next-mdx-remote": "^4.2.0",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
-    "react-markdown": "^8.0.7",
     "react-query": "^3.39.3",
     "react-scroll": "^1.8.9",
     "react-scroll-parallax": "^3.4.2",
