--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "gray-matter": "^4.0.3",
+    "highlight.js": "^11.8.0",
     "next": "13.4.4",
     "next-mdx-remote": "^4.2.0",
     "postcss": "8.4.24",
@@ -30,6 +31,8 @@
     "react-query": "^3.39.3",
     "react-scroll": "^1.8.9",
     "react-scroll-parallax": "^3.4.2",
+    "rehype-highlight": "^6.0.0",
+    "rehype-slug": "^5.1.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
   },
