--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "highlight.js": "^11.8.0",
     "next": "13.4.4",
     "next-mdx-remote": "^4.2.0",
+    "next-sitemap": "^4.1.8",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
