--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "clean": "next clean"
+    "clean": "next clean",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@mdx-js/loader": "^2.3.0",
@@ -35,7 +36,8 @@
     "rehype-highlight": "^6.0.0",
     "rehype-slug": "^5.1.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "xmlbuilder": "^15.1.1"
   },
   "devDependencies": {
     "standard": "^17.1.0"
