--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
+    "framer-motion": "^10.12.18",
     "gray-matter": "^4.0.3",
     "highlight.js": "^11.8.0",
     "next": "13.4.4",
