improve responsive blog

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-query": "^3.39.3",
+    "react-responsive": "^9.0.2",
     "react-scroll": "^1.8.9",
     "react-scroll-parallax": "^3.4.2",
     "rehype-highlight": "^6.0.0",
