--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-loader-spinner": "^5.3.4",
     "react-markdown": "^8.0.7",
     "react-query": "^3.39.3",
     "react-responsive": "^9.0.2",
