--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "rehype-slug": "^5.1.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
-    "xmlbuilder": "^15.1.1"
+    "xmlbuilder": "^15.1.1",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "standard": "^17.1.0"
