added new design for my curriculum

--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "framer-motion": "^10.12.18",
     "gray-matter": "^4.0.3",
     "highlight.js": "^11.8.0",
-    "next": "13.4.4",
+    "next": "^14.2.4",
     "next-mdx-remote": "^4.2.0",
     "next-sitemap": "^4.1.8",
     "nodemailer": "^6.9.3",
-    "postcss": "8.4.24",
+    "postcss": "^8.4.39",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
