--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -13,25 +13,26 @@
   "dependencies": {
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
-    "@next/eslint-plugin-next": "^13.4.7",
-    "@next/mdx": "^13.4.7",
+    "@next/env": "^15.2.1",
+    "@next/eslint-plugin-next": "15.2.1",
+    "@next/mdx": "15.2.1",
     "@types/node": "20.2.5",
-    "@types/react": "18.2.9",
-    "@types/react-dom": "18.2.4",
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4",
     "autoprefixer": "10.4.14",
     "emailjs-com": "^3.2.0",
     "eslint": "8.42.0",
-    "eslint-config-next": "13.4.4",
+    "eslint-config-next": "15.2.1",
     "framer-motion": "^10.12.18",
     "gray-matter": "^4.0.3",
     "highlight.js": "^11.8.0",
-    "next": "13.4.4",
+    "next": "15.2.1",
     "next-mdx-remote": "^4.2.0",
     "next-sitemap": "^4.1.8",
     "nodemailer": "^6.9.3",
     "postcss": "8.4.24",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-icons": "^4.10.1",
     "react-loader-spinner": "^5.3.4",
     "react-markdown": "^8.0.7",
@@ -47,5 +48,9 @@
   },
   "devDependencies": {
     "standard": "^17.1.0"
+  },
+  "overrides": {
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4"
   }
 }
