--- a/package.json
+++ b/package.json
@@ -17,13 +17,12 @@
     "@next/eslint-plugin-next": "15.2.1",
     "@next/mdx": "15.2.1",
     "@types/node": "20.2.5",
-    "@types/react": "19.0.10",
+    "@types/nodemailer": "^6.4.17",
+    "@types/react": "^19.0.10",
     "@types/react-dom": "19.0.4",
     "autoprefixer": "10.4.14",
     "emailjs-com": "^3.2.0",
-    "eslint": "8.42.0",
-    "eslint-config-next": "15.2.1",
-    "framer-motion": "^10.12.18",
+    "framer-motion": "^12.4.10",
     "gray-matter": "^4.0.3",
     "highlight.js": "^11.8.0",
     "next": "15.2.1",
@@ -35,7 +34,7 @@
     "react-dom": "18.3.1",
     "react-icons": "^4.10.1",
     "react-loader-spinner": "^5.3.4",
-    "react-markdown": "^8.0.7",
+    "react-markdown": "^10.1.0",
     "react-query": "^3.39.3",
     "react-responsive": "^9.0.2",
     "react-scroll": "^1.8.9",
@@ -47,10 +46,13 @@
     "xmlbuilder": "^15.1.1"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.26.0",
+    "@typescript-eslint/parser": "^8.26.0",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^15.2.1",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-prettier": "^5.2.3",
+    "prettier": "^3.5.3",
     "standard": "^17.1.0"
-  },
-  "overrides": {
-    "@types/react": "19.0.10",
-    "@types/react-dom": "19.0.4"
   }
 }
