--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
-      "@context/*":["./context/globalContext.tsx"],
+      "@context/*": ["./context/globalContext.tsx"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
