--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-scroll-parallax": "^3.4.2",
     "rehype-highlight": "^6.0.0",
     "rehype-slug": "^5.1.0",
+    "strapi-plugin-email-designer": "^2.2.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
     "xmlbuilder": "^15.1.1"
